change navbar position from fixed to sticky to fix globalMessage not showing properly on mobile, add highlighted blog post section to blogPostContent, styling changes

--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -3,7 +3,7 @@
 
 .blogCard {
   height: 25vh;
-  min-height: 250px;
+  min-height: 320px;
   border-radius: 1rem;
   @include shadow();
   display: flex;
